[package]
name = "ashlang-spartan"
version = "0.1.0"
edition = "2021"

[dependencies]
#ashlang = { path = "../ashlang" }
ashlang = { git = "https://github.com/chancehudson/ashlang.git" }
curve25519-dalek = "4.1.3"
merlin = "3.0.0"
scalarff = "0.1.1"

[dependencies.spartan]
#path = "../spartan"
version = "0.8.0"
default-features = false
